[package]
authors = ["Matthew Wynn <matthew@matthewwynn.com>"]
description = "Deduplicates images in a folder"
edition = "2018"
name = "img_dedup"
version = "0.1.0"

[dependencies]
bit-vec = "0.4.0"
clap = "2.32"
failure = "0.1"
failure_derive = "0.1"
image = "0.19.0"
itertools = "0.7"
lazy_static = "1.1.0"
log = "0.4"
rand = "0.5.5"
rayon = "1.0.2"
simplelog = "0.5"
walkdir = "2.2.5"
gtk = "0.5.0"
relm = "0.15.0"
relm-derive = "0.15.0"
relm-attributes = "0.15.0"

[dependencies.conrod]
features = ["glium", "winit"]
version = "0.61"

[dependencies.img_hash]
features = ["rust-image"]
version = "2.1.0"

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]
